--- a/css/style.css
+++ b/css/style.css
@@ -204,3 +204,38 @@ a:hover {
 #footer .copyright a:hover {
     color: #F84174;
 }
+
+@media only screen and (max-device-width: 480px) {
+    html, body {
+        min-width: 0;
+        width: 100%;   
+        height: 100%;
+    }
+    #nav {
+        padding-left: 20px;
+    }
+    #nav .inner {
+        width: 100%;
+    }
+    #body {
+        width: 100%;
+        margin: 0;
+    }
+    #body .contents {
+        padding: 50px 25px 35px;
+    }
+    #body .contents ul li {
+        margin: 0 0 20px 0;
+    }
+    .hidden {
+        display: none;
+    }
+    #footer {
+        margin: 0;
+    }
+    #footer .copyright {
+        width: 100%;
+    }
+
+
+}
